syntax = "proto3";

package projects;

service ProjectService {
  rpc HealthCheck(HealthRequest) returns (HealthResponse);
  rpc GetProjects(Empty) returns (ProjectList);
  rpc GetProjectById(ProjectIdRequest) returns (Project);
  rpc CreateProject(CreateProjectRequest) returns (Project);
  rpc UpdateProject(UpdateProjectRequest) returns (Project);
  rpc UpdateProjectStatus(UpdateProjectStatusRequest) returns (Project);
  rpc DeleteProject(ProjectIdRequest) returns (Empty);
  rpc GetProjectReport(ProjectIdRequest) returns (ProjectReport);
}

message HealthRequest {}
message HealthResponse { string status = 1; }

message Empty {}

message Project {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string status = 4;
}

message ProjectList {
  repeated Project projects = 1;
}

message ProjectIdRequest {
  int32 id = 1;
}

message CreateProjectRequest {
  string name = 1;
  string description = 2;
}

message UpdateProjectRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string status = 4;
}

message UpdateProjectStatusRequest {
  int32 id = 1;
  string status = 2;
}

message ProjectReport {
  int32 projectId = 1;
  int32 totalTasks = 2;
  int32 completedTasks = 3;
  string progress = 4;
}
